--- a/user/templates/user/signup.html
+++ b/user/templates/user/signup.html
@@ -38,7 +38,7 @@
           </label>
 
           <div class="sin">
-            <a href="organizationhomepage.html"
+            <a href="/orghome/1"
               ><button class="submit" type="button">Sign Up</button></a
             >
           </div>
