--- a/user/templates/user/eventdet.html
+++ b/user/templates/user/eventdet.html
@@ -10,7 +10,7 @@
    <div class="row">
         <div class="col">
           <div class="jumbotron">
-            <h1 class="display-4">{{event.title}}</h1>
+            <h1 class="display-4">{{event.event_title}}</h1>
             <p class="lead">
               {{event.description}}
             </p>
