--- a/static/css/adminhomepage.css
+++ b/static/css/adminhomepage.css
@@ -1,72 +1,38 @@
 body {
   background-color: #170c0c;
   font-family: poppins;
-  padding-bottom: 360px;
-}
-.navbar {
-  background-color: #170c0c;
-  text-transform: uppercase;
-  font-family: poppins;
   font-size: 15px;
-  letter-spacing: 0.5px;
-  margin-bottom: 80px;
-  top: 0;
-  position: sticky;
-  z-index: 1;
-}
-.na ul li a:hover {
-  color: black;
-  background: #ffda15;
-}
-
-.navbar a {
-  color: white;
-}
-.drop a {
-  color: black;
-  font-size: 14px;
-  letter-spacing: 0.5px;
-}
-.dropdown-menu {
-  background: white;
-  padding: 0;
-}
-.dropdown-item:hover {
-  background: #ffda15;
 }
 .container {
   color: white;
   min-height: 1500px;
 }
-.row {
-  min-height: 200px;
+.dis {
+  margin-top: 45px;
+  font-size: 20px;
+  letter-spacing: 0.5px;
 }
-.abtn {
-  font-family: poppins;
+.lead {
   font-size: 16px;
-  cursor: pointer;
-  background: #ffda15;
-  border: 1px solid white;
+  letter-spacing: 0.5px;
 }
-.btn-lg {
-  width: 200px;
-  font-family: poppins;
-  font-size: 16px;
-  cursor: pointer;
-  background: #ffda15;
-  border: 1px solid white;
-}
+
 .btn-lg:hover {
   color: white;
   background-color: black;
   border-color: #ffda15;
 }
-.col img {
-  width: 120px;
-  height: 120x;
-  border-radius: 150px;
+/* .col img {
+  width: 250px;
+  height: 150px;
+  border-radius: 10px;
   grid-area: image;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
+  margin-right: 100px;
+} */
+
+.img-fluid {
+  max-width: 50%;
 }
 .table-dark {
   border-color: red;
@@ -94,12 +60,11 @@ th {
 }
 
 .a:hover {
-  background: #ffda15;
+  background: white;
   color: black;
 }
 .insert {
-  width: 190px;
-  color: white;
+  color: black;
   border: 1px solid white;
 }
 .insert:hover {
@@ -111,24 +76,6 @@ th {
   color: white;
   background-color: black;
   border-color: #ffda15;
-}
-
-.image img {
-  height: 10%;
-  width: 15%;
-  border-radius: 5px;
-  grid-area: image;
-  margin-bottom: 10px;
-}
-
-.image img:hover {
-  transform: scale(2.15);
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
-}
-.image img {
-  transition: 0.5s ease;
-  cursor: pointer;
-  margin: 30px;
 }
 
 h2 {
@@ -218,7 +165,46 @@ h2 {
   color: white;
   padding: 8px 10px;
 }
+.st {
+  margin-bottom: 80px;
+}
+.main {
+  margin-bottom: 25px;
+}
+.card {
+  margin: auto;
+  margin-bottom: 5px;
+  background: linear-gradient(#054f38, black);
+  box-shadow: 0px 2px 10px green;
+}
+.card-body h5 {
+  font-size: 17px;
+  color: white;
+  background-size: cover;
+  border-radius: 5px;
+}
+.card-body p {
+  font-size: 16px;
+  color: white;
+}
+.sl {
+  font-size: 15px;
+  cursor: pointer;
+  background: #ffda15;
+  color: black;
+  border: 1px solid black;
+}
+.df {
+  border-color: black;
+}
 
 input[type="file"] {
   display: none;
+}
+.q {
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: 1px;
+
+  margin-bottom: 20px;
 }
