--- a/user/templates/user/navbar.html
+++ b/user/templates/user/navbar.html
@@ -1,7 +1,8 @@
 {% load static %}
-<nav class="navbar navbar-expand-md nav">
+<link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
+<nav class="navbar navbar-expand-md sticky-top">
   <a class="navbar-brand" href="/"
-    ><img class="img-fluid t" src="{% static 'images/a.png' %}" alt=""
+    ><img class="img-fluid t" src="{% static 'images/a.png'%}" alt=""
   /></a>
   <button
     class="navbar-toggler"
@@ -18,7 +19,9 @@
   <div class="collapse navbar-collapse na" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/about">What We Do</a>
+        <a class="nav-link" href="/about"
+          >About Us<span class="sr-only">(current)</span></a
+        >
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/gallary">Gallary</a>
@@ -43,10 +46,12 @@
 
           <div class="drop"></div>
           <a class="dropdown-item" href="/allevents">Belongings</a>
+          <div class="drop"></div>
+          <a class="dropdown-item" href="/allevents">Both</a>
         </div>
       </li>
     </ul>
   </div>
-  <span>Hello, {{request.user}}</span>
-  <span><a href="/logout">Logout</a></span>
+  <span class="z mr-2">Hello, {{request.user}}</span>
+  <span class="z"><a href="/logout">Logout</a></span>
 </nav>
